src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_orb jyppx_ocv_features2d_orb;
typedef struct jyppx_ocv_features2d_descriptor_matcher jyppx_ocv_features2d_descriptor_matcher;
typedef struct jyppx_ocv_features2d_sift jyppx_ocv_features2d_sift;
typedef struct jyppx_ocv_features2d_fast jyppx_ocv_features2d_fast;
typedef struct jyppx_ocv_features2d_gftt jyppx_ocv_features2d_gftt;
typedef struct jyppx_ocv_features2d_flann_matcher jyppx_ocv_features2d_flann_matcher;
typedef struct jyppx_ocv_features2d_mser jyppx_ocv_features2d_mser;
typedef struct jyppx_ocv_features2d_simple_blob jyppx_ocv_features2d_simple_blob;
typedef struct jyppx_ocv_features2d_affine jyppx_ocv_features2d_affine;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_default_name_length(
    const jyppx_ocv_features2d_orb* orb,
    int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_orb_default_name_fill(
    const jyppx_ocv_features2d_orb* orb,
    char* buffer,
    int buffer_capacity,
    int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_default_name_length(const jyppx_ocv_features2d_sift* sift, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_default_name_fill(const jyppx_ocv_features2d_sift* sift, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_default_name_length(const jyppx_ocv_features2d_fast* fast, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_default_name_fill(const jyppx_ocv_features2d_fast* fast, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_default_name_length(const jyppx_ocv_features2d_gftt* gftt, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_default_name_fill(const jyppx_ocv_features2d_gftt* gftt, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_create(jyppx_ocv_features2d_flann_matcher** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_flann_matcher_release(jyppx_ocv_features2d_flann_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_clone(const jyppx_ocv_features2d_flann_matcher* matcher, int empty_train_data, jyppx_ocv_features2d_descriptor_matcher** clone);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_is_mask_supported(const jyppx_ocv_features2d_flann_matcher* matcher, int* supported);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_empty(const jyppx_ocv_features2d_flann_matcher* matcher, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_clear(jyppx_ocv_features2d_flann_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_train(jyppx_ocv_features2d_flann_matcher* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_add(jyppx_ocv_features2d_flann_matcher* matcher, const jyppx_ocv_mat* const* descriptors, int descriptor_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_flann_matcher_get_train_descriptors_count(const jyppx_ocv_features2d_flann_matcher* matcher, int* descriptor_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_default_name_length(const jyppx_ocv_features2d_mser* mser, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_mser_default_name_fill(const jyppx_ocv_features2d_mser* mser, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_default_norm(const jyppx_ocv_features2d_simple_blob* detector, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_default_name_length(const jyppx_ocv_features2d_simple_blob* detector, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_default_name_fill(const jyppx_ocv_features2d_simple_blob* detector, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_detect_count(const jyppx_ocv_features2d_simple_blob* detector, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_detect_fill(const jyppx_ocv_features2d_simple_blob* detector, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_get_params(const jyppx_ocv_features2d_simple_blob* detector, jyppx_ocv_simple_blob_params* parameters);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_set_params(jyppx_ocv_features2d_simple_blob* detector, const jyppx_ocv_simple_blob_params* parameters);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_get_blob_contours_count(const jyppx_ocv_features2d_simple_blob* detector, int* contour_count, int* total_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_simple_blob_get_blob_contours_fill(const jyppx_ocv_features2d_simple_blob* detector, int* offsets, int offset_capacity, jyppx_ocv_point* points, int point_capacity, int* contour_count, int* total_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_orb(
    const jyppx_ocv_features2d_orb* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_sift(
    const jyppx_ocv_features2d_sift* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_fast(
    const jyppx_ocv_features2d_fast* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_gftt(
    const jyppx_ocv_features2d_gftt* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_mser(
    const jyppx_ocv_features2d_mser* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_simple_blob(
    const jyppx_ocv_features2d_simple_blob* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_affine_release(jyppx_ocv_features2d_affine* affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_clear(jyppx_ocv_features2d_affine* affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_empty(const jyppx_ocv_features2d_affine* affine, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_descriptor_size(const jyppx_ocv_features2d_affine* affine, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_descriptor_type(const jyppx_ocv_features2d_affine* affine, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_default_norm(const jyppx_ocv_features2d_affine* affine, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_default_name_length(const jyppx_ocv_features2d_affine* affine, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_default_name_fill(const jyppx_ocv_features2d_affine* affine, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_detect_count(const jyppx_ocv_features2d_affine* affine, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_detect_fill(const jyppx_ocv_features2d_affine* affine, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_set_view_params(jyppx_ocv_features2d_affine* affine, const float* tilts, int tilt_count, const float* rolls, int roll_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_get_view_params_count(const jyppx_ocv_features2d_affine* affine, int* tilt_count, int* roll_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_get_view_params_fill(const jyppx_ocv_features2d_affine* affine, float* tilts, int tilt_capacity, float* rolls, int roll_capacity, int* tilt_count, int* roll_count);