src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_default_norm")]
        internal static partial int Features2DSimpleBlobDefaultNorm(IntPtr detector, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_detect_count")]
        internal static partial int Features2DSimpleBlobDetectCount(IntPtr detector, IntPtr image, IntPtr mask, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_detect_fill")]
        internal static partial int Features2DSimpleBlobDetectFill(IntPtr detector, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_get_params")]
        internal static partial int Features2DSimpleBlobGetParams(IntPtr detector, out NativeSimpleBlobParams parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_set_params")]
        internal static partial int Features2DSimpleBlobSetParams(IntPtr detector, ref NativeSimpleBlobParams parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_get_blob_contours_count")]
        internal static partial int Features2DSimpleBlobGetBlobContoursCount(IntPtr detector, out int contourCount, out int totalPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_get_blob_contours_fill")]
        internal static partial int Features2DSimpleBlobGetBlobContoursFill(IntPtr detector, int* offsets, int offsetCapacity, NativePoint* points, int pointCapacity, out int contourCount, out int totalPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_default_name_length")]
        internal static partial int Features2DOrbDefaultNameLength(IntPtr orb, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_default_name_fill")]
        internal static partial int Features2DOrbDefaultNameFill(IntPtr orb, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_default_name_length")]
        internal static partial int Features2DSiftDefaultNameLength(IntPtr sift, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_default_name_fill")]
        internal static partial int Features2DSiftDefaultNameFill(IntPtr sift, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_default_name_length")]
        internal static partial int Features2DFastDefaultNameLength(IntPtr fast, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_default_name_fill")]
        internal static partial int Features2DFastDefaultNameFill(IntPtr fast, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_default_name_length")]
        internal static partial int Features2DGfttDefaultNameLength(IntPtr gftt, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_default_name_fill")]
        internal static partial int Features2DGfttDefaultNameFill(IntPtr gftt, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_default_name_length")]
        internal static partial int Features2DMserDefaultNameLength(IntPtr mser, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_mser_default_name_fill")]
        internal static partial int Features2DMserDefaultNameFill(IntPtr mser, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_default_name_length")]
        internal static partial int Features2DSimpleBlobDefaultNameLength(IntPtr detector, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_simple_blob_default_name_fill")]
        internal static partial int Features2DSimpleBlobDefaultNameFill(IntPtr detector, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_orb")]
        internal static partial int Features2DAffineCreateFromOrb(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_sift")]
        internal static partial int Features2DAffineCreateFromSift(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_fast")]
        internal static partial int Features2DAffineCreateFromFast(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_gftt")]
        internal static partial int Features2DAffineCreateFromGftt(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_mser")]
        internal static partial int Features2DAffineCreateFromMser(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_simple_blob")]
        internal static partial int Features2DAffineCreateFromSimpleBlob(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_release")]
        internal static partial void Features2DAffineRelease(IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_clear")]
        internal static partial int Features2DAffineClear(IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_empty")]
        internal static partial int Features2DAffineEmpty(IntPtr affine, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_descriptor_size")]
        internal static partial int Features2DAffineDescriptorSize(IntPtr affine, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_descriptor_type")]
        internal static partial int Features2DAffineDescriptorType(IntPtr affine, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_default_norm")]
        internal static partial int Features2DAffineDefaultNorm(IntPtr affine, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_default_name_length")]
        internal static partial int Features2DAffineDefaultNameLength(IntPtr affine, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_default_name_fill")]
        internal static partial int Features2DAffineDefaultNameFill(IntPtr affine, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_detect_count")]
        internal static partial int Features2DAffineDetectCount(IntPtr affine, IntPtr image, IntPtr mask, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_detect_fill")]
        internal static partial int Features2DAffineDetectFill(IntPtr affine, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_set_view_params")]
        internal static partial int Features2DAffineSetViewParams(IntPtr affine, float* tilts, int tiltCount, float* rolls, int rollCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_get_view_params_count")]
        internal static partial int Features2DAffineGetViewParamsCount(IntPtr affine, out int tiltCount, out int rollCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_get_view_params_fill")]
        internal static partial int Features2DAffineGetViewParamsFill(IntPtr affine, float* tilts, int tiltCapacity, float* rolls, int rollCapacity, out int tiltCount, out int rollCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_create")]
        internal static partial int Features2DFlannMatcherCreate(out IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_release")]
        internal static partial void Features2DFlannMatcherRelease(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_clone")]
        internal static partial int Features2DFlannMatcherClone(IntPtr matcher, int emptyTrainData, out IntPtr clone);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_is_mask_supported")]
        internal static partial int Features2DFlannMatcherIsMaskSupported(IntPtr matcher, out int supported);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_empty")]
        internal static partial int Features2DFlannMatcherEmpty(IntPtr matcher, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_clear")]
        internal static partial int Features2DFlannMatcherClear(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_train")]
        internal static partial int Features2DFlannMatcherTrain(IntPtr matcher);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_add")]
        internal static partial int Features2DFlannMatcherAdd(IntPtr matcher, IntPtr* descriptors, int descriptorCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_flann_matcher_get_train_descriptors_count")]
        internal static partial int Features2DFlannMatcherGetTrainDescriptorsCount(IntPtr matcher, out int descriptorCount);
